incremental tidy up removed guava